# my-diary-be-15

./: .env.dev  .gitignore  .gitmessage.txt  README.md  pyproject.toml  test_api.html
app/: index.html  main.py  pyproject.toml
app/api/v1/: __init__.py  auth.py  diary.py  question.py  quote.py
app/app/: main - 복사본.py  main.py
app/app/api/v1/: __init__.py  auth.py  diary.py  question.py  quote.py
app/app/core/: config.py  security.py
app/app/db/: base.py  session.py
app/app/models/: bookmark.py  diary.py  question.py  quote.py  token_blacklist.py  user.py
app/app/repositories/: question_repo.py
app/app/schemas/: diary.py  question.py  quote.py  user.py
app/app/services/: auth_service.py  diary_service.py  question_service.py
app/core/: config.py  security.py
app/db/: base.py  database.py  session.py
app/models/: bookmark.py  diary.py  question.py  quote.py  token_blacklist.py  user.py
app/repositories/: question_repo.py  user_repo.py
app/schemas/: diary.py  question.py  quote.py  user.py
app/scraping/: question_scraper.py  quote_scraper.py
app/services/: auth_service.py  diary_service.py  question_service.py  quote_service.py  security.py
migrations/models/: 0_20251208210805_init.py  1_20251208224909_add_email_to_user.py
